tests/error/comprehension_errors/capture1.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(xs: list[int], q: Qubit) -> linst[Qubit]:
13:        return [q for x in xs]
                   ^
GuppyTypeError: Variable `q` with linear type `Qubit` would be used multiple times when evaluating this comprehension
